<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AantekeningToevoegenActivity">

        <EditText
            android:id="@+id/AantekeningInvoerVeld"
            style="@android:style/Widget.DeviceDefault.EditText"
            android:layout_width="330dp"
            android:layout_height="144dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="124dp"
            android:background="@drawable/border_full"
            android:ems="10"
            android:hint="@string/text_aantekening"
            android:inputType="textMultiLine"
            android:paddingLeft="4dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/grey"
            android:textIsSelectable="true"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonVoegToeNieuweAantekeningOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginBottom="20dp"
            android:text="@string/textButtonToevoegen"
            app:layout_constraintBottom_toTopOf="@+id/AantekeningInvoerVeld"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonAnnulerenToevoegen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="20dp"
            android:text="@string/textButtonAnnuleren"
            app:layout_constraintBottom_toTopOf="@+id/AantekeningInvoerVeld"
            app:layout_constraintStart_toEndOf="@+id/buttonVoegToeNieuweAantekeningOk" />

        <TextView
            android:id="@+id/textView_invoer_aantekening_aanwijzing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/InvoerAantekening"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AantekeningInvoerVeld" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
